--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,17 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  json_serializable: ^6.8.0
+  build_runner: ^2.4.13
 
 flutter:
   uses-material-design: true
