--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,11 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.20.5
+  hooks_riverpod: ^2.6.1
   json_annotation: ^4.9.0
+  mocktail: ^1.0.4
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -18,6 +22,8 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   json_serializable: ^6.8.0
   build_runner: ^2.4.13
+  custom_lint: ^0.7.0
+  riverpod_lint: ^2.6.2
 
 flutter:
   uses-material-design: true
