--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   hooks_riverpod: ^2.6.1
   json_annotation: ^4.9.0
   mocktail: ^1.0.4
+  rxdart: ^0.28.0
   shared_preferences: ^2.3.2
 
 dev_dependencies:
