--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.20.5
+  go_router: ^14.3.0
   hooks_riverpod: ^2.6.1
   json_annotation: ^4.9.0
   mocktail: ^1.0.4
@@ -25,6 +26,7 @@ dev_dependencies:
   build_runner: ^2.4.13
   custom_lint: ^0.7.0
   riverpod_lint: ^2.6.2
+  go_router_builder: ^2.7.1
 
 flutter:
   uses-material-design: true
