--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,10 @@ dependencies:
   hooks_riverpod: ^2.6.1
   json_annotation: ^4.9.0
   mocktail: ^1.0.4
+  omni_datetime_picker: ^2.0.5
   rxdart: ^0.28.0
   shared_preferences: ^2.3.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
