--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,6 +13,9 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+
+         // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled = true
     }
 
     kotlinOptions {
@@ -28,6 +31,8 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+
+        multiDexEnabled = true
     }
 
     buildTypes {
@@ -41,4 +46,10 @@ android {
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+  implementation 'androidx.window:window:1.0.0'
+  implementation 'androidx.window:window-java:1.0.0'
+  coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
