--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.20.5
+  flutter_local_notifications: ^18.0.0
   go_router: ^14.3.0
   hooks_riverpod: ^2.6.1
   json_annotation: ^4.9.0
@@ -18,6 +19,7 @@ dependencies:
   omni_datetime_picker: ^2.0.5
   rxdart: ^0.28.0
   shared_preferences: ^2.3.2
+  timezone: ^0.9.4
   uuid: ^4.5.1
 
 dev_dependencies:
